--- a/trunk/lnx.milanin.com/egroupware/egroupware/phpgwapi/templates/idots/css/idots.css
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/phpgwapi/templates/idots/css/idots.css
@@ -120,6 +120,15 @@ td
 	border-bottom: #9c9c9c 1px solid
 }
 
+.divPrivacyLoginbox 
+{
+	position:relative;
+	width: 600px; 
+	border-right: #9c9c9c 1px solid; 
+	border-top: #9c9c9c 1px solid; 
+	border-left: #9c9c9c 1px solid; 
+	border-bottom: #9c9c9c 1px solid
+}
 .divLoginboxHeader 
 {
 	text-align:center;
