--- a/trunk/lnx.milanin.com/egroupware/egroupware/phpgwapi/templates/idots/css/idots.css
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/phpgwapi/templates/idots/css/idots.css
@@ -238,8 +238,22 @@ a.textSidebox
 	border-color:#7e7e7e;
 	border-width:1px;
 	border-style:solid;
+	background-repeat:no-repeat;
+        background-position: center center;
+        background-image:url('./phpgwapi/templates/idots/images/login-background.jpg');
+        height:85%;
 }
-
+#divPrivacyMain
+{
+	background-color:white;
+	margin-top: 5px;
+	padding:9px;
+	border-color:#7e7e7e;
+	border-width:1px;
+	border-style:solid;
+        background-position: center center;
+        background-image:url('./phpgwapi/templates/idots/images/login-background.jpg');
+}
 #divLogo
 {
 	position:absolute;
