--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/sitemgr-site/templates/rhuk_orange_smoothie/css/template_css.css
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/sitemgr-site/templates/rhuk_orange_smoothie/css/template_css.css
@@ -550,8 +550,8 @@ a.pagenav:hover {
 	font-size: 8pt;
 }
 tr.header {
-        background: url("http://lnx.milanin.com/egroupware/sitemgr/sitemgr-site/templates/rhuk_orange_smoothie/images/generic_header.jpg");
-        background-image: url("http://lnx.milanin.com/egroupware/sitemgr/sitemgr-site/templates/rhuk_orange_smoothie/images/generic_header.jpg");
+        background: url("/egroupware/sitemgr/sitemgr-site/templates/rhuk_orange_smoothie/images/generic_header.jpg");
+        background-image: url("/egroupware/sitemgr/sitemgr-site/templates/rhuk_orange_smoothie/images/generic_header.jpg");
         }
 img.logo {
         border: 2px solid #990041;
