added tinyMCE to reply form removed small/large input controller, now only awailable in settings, because of tinyMCE removed input type controll, now it's always html

--- a/trunk/lnx.milanin.com/egroupware/vanilla/styles/milanin/global.css
+++ b/trunk/lnx.milanin.com/egroupware/vanilla/styles/milanin/global.css
@@ -1452,14 +1452,14 @@
 			}
 			.SmallCommentBox,
 			.LargeCommentBox {
-				width: 460px;
+				width: 100%;
 				font-size: 12px;
 			}
 			.SmallCommentBox {
-				height: 130px;
+				height: 430px;
 			}
 			.LargeCommentBox {
-				height: 400px;
+				height: 700px;
 			}
 		
 		/* FormatType: A radio list of the various comment formatting options. */
