--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/sitemgr-site/templates/rhuk_orange_smoothie/css/template_css.css
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/sitemgr-site/templates/rhuk_orange_smoothie/css/template_css.css
@@ -9,7 +9,7 @@
 	font-weight: 800;
 	font-family: Tahoma, Arial, Helvetica, sans-serif;
 	color: #990041;
-	#text-indent: 10px;
+	text-indent: 10px;
 	font-variant:small-caps;
 }
 
@@ -98,7 +98,7 @@ BODY {
 	margin: 0px 0px 0px 0px;
 	background-color : #FFFFFF ;
 	color : #3C4B4D;
-	scrollbar-3dlight-color: #d0d9db;
+	scrollbar-dlight-color: #d0d9db;
 	scrollbar-base-color: #D6E5AA;
 	scrollbar-darkshadow-color: #becbcd;
 	scrollbar-face-color: #eaecee;
@@ -122,7 +122,7 @@ td,tr,p,div {
 	border-top: outset 1px #BECBCD;
 	border-bottom: solid 1px #ffffff;
 	text-align: center;
-	cursor: hand;
+	cursor: pointer;
 	font-weight: normal;
 	color: #495C5F;
 }
@@ -133,7 +133,7 @@ td,tr,p,div {
 	border-top: outset 1px #E0E0E0;
 	border-bottom: solid 1px #BECBCD;
 	text-align: center;
-	cursor: hand;
+	cursor: pointer;
 	font-weight: normal;
 	color: #769196;
 }
@@ -218,8 +218,9 @@ a.mainmenu:link, a.mainmenu:visited {
 	font-weight: normal;
 	}
 
-a.mainmenu:hover, {
-	color: #bf2868; text-decoration: underline;
+a.mainmenu:hover {
+	color: #bf2868; 
+        text-decoration: underline;
 	}
 
 a.sublevel:link, a.sublevel:visited {
@@ -365,7 +366,6 @@ a.readon:hover {
 	font-weight: bold;
 	text-align: center;
 	font-size: 12px;
-	font: bold;
 	background: #D0D9DB;
 	border: 1px solid #859ba0;
 	height: 20px;
@@ -403,10 +403,9 @@ a.category:hover {
 .pollstableborder {
 		border: 0px solid;
 		padding: 0px;
-		}
 	}
 
-.sectiontableentry1, {
+.sectiontableentry1 {
 	background-color : #edf1f1;
 	padding-top: 1px;
 	padding-bottom: 1px;
@@ -485,7 +484,7 @@ ul {
 	}
 
 li {
-	list-style: inside url(../../../images/M_images/arrowp.png) 3px;
+	list-style: inside url(../../../images/M_images/arrowp.png);
 	list-style-image: url(../../../images/M_images/arrowp.png);
 	}
 
