A new Class for Notifications with EGW PHPMailer code and settings Added Category notification in the New Discussion code Added defines for egw code inclusion Added some phrases in English dict for mail messages

--- a/trunk/lnx.milanin.com/egroupware/vanilla/styles/milanin/global.css
+++ b/trunk/lnx.milanin.com/egroupware/vanilla/styles/milanin/global.css
@@ -586,7 +586,9 @@
 	.Comment {
 		padding: 8px;
 		padding-bottom: 2px;
-		border-bottom: 1px solid #DEDEDF;
+		margin: 4px;
+		border: 1px solid #859ba0;
+		background: #EDF1F1;
 	}
                 .CommentHeader {
                   padding: 8px;
