Removed ugly LI pics

--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/sitemgr-site/templates/rhuk_orange_smoothie/css/template_css.css
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/sitemgr-site/templates/rhuk_orange_smoothie/css/template_css.css
@@ -486,12 +486,12 @@ a.category:hover {
 ul {
 	margin: 0px 0px 0px 0px;
 	}
-
+/*
 li {
 	list-style: inside url(../../../images/M_images/arrowp.png);
 	list-style-image: url(../../../images/M_images/arrowp.png);
 	}
-
+*/
 .fase4rdf {
 	font-family: Trebuchet MS, Verdana, Arial, Helvetica, sans-serif;
 	font-size: 11px; color: #242D0C; font-weight: normal;
