--- a/trunk/lnx.milanin.com/egroupware/members/_templates/cleanview/template_css.css
+++ b/trunk/lnx.milanin.com/egroupware/members/_templates/cleanview/template_css.css
@@ -688,6 +688,7 @@ div#clubincall_dropdown label {
   background-color: #fff;
   border-color:#990041;
   float: right;
+  overflow-y: scroll;
 }
 .background_div {
   position: fixed;
@@ -705,6 +706,7 @@ div#clubincall_dropdown label {
 .dst_row {
  display: block;
  margin: 10px;
+ margin-bottom:18px;
  top: 2px;
  padding: 10px;
  vertical-align: top;
@@ -714,9 +716,113 @@ div#clubincall_dropdown label {
 }
 .dst_row_label {
  display: block;
- margin: 10px;
- top: 2px;
- padding: 1px;
+ margin-top: -20px;
+ margin-bottom:8px;
+ padding: 2px;
  vertical-align: top;
  font-size: 10pt;
+ border:  1px solid #000;
+ background-color: #fff;
+ width:50%;
+}
+.control_panel_titlebar {
+ padding: 4px;
+ margin-bottom:18px;
+ text-align: right;
+ background-color: #F3F4F5;
+ border-bottom: 1px solid #990041;
+}
+.close_img {
+ border:0;
+}
+div[class=dst_row] select {
+  margin: 2px;
+  border: 1px solid #990041;
+  background-color: #fff;
+  font-size: 10pt;
+}
+div[class=dst_row] fieldset {
+  display: inline;
+  vertical-align: top;
+}
+div[class=dst_row] fieldset input[type=button] {
+ display:block;
+ width:100px;
+ height: 21px;
+ margin: 2px;
+ font-size: 8pt;
+ border: 1px solid #990041;
+ color: #000;
+ background-color: #fff;
+}
+.number_row{
+  display: block;
+ margin: 10px;
+ margin-bottom:18px;
+ top: 2px;
+ padding: 10px;
+ vertical-align: top;
+ border: 1px solid #990041;
+ background-color: #F3F4F5;
+ font-size: 10pt; 
+}
+div#number_row fieldset {
+ display: inline;
+ vertical-align:top;
+}
+
+div#number_row input[type=button] {
+ display:block;
+ vertical-align: top;
+ width:100px;
+ height: 21px;
+ margin: 2px;
+ font-size: 8pt;
+ border: 1px solid #990041;
+ color: #000;
+}
+div#number_row input {
+ display:inline;
+ padding:2px;
+ vertical-align: top;
+ margin: 2px;
+ font-size: 8pt;
+ border: 1px solid #990041;
+ color: #000;
+ margin: 2px;
+ border: 1px solid #990041;
+ background-color: #fff;
+}
+.number_use{
+ display:block;
+ float: left;
+ margin-top: -40px;
+}
+.loading_indicator {
+ position: fixed;
+ left:0;
+ top:0;
+ background-color: #fff;
+ width: 150px;
+ height: 40px;
+ display:none;
+ z-index: 10000;
+}
+
+.loading_indicator_centered {
+  position: fixed;
+  z-index: 10000;
+  top: 10%;
+  left: 10%;
+  width: 80%;
+  height: 80%;
+  border: 3px solid;
+  background-color: #fff;
+  border-color:#990041;
+  display: none;
+}
+.loading_indicator_img, .loading_indicator_text {
+ vertical-align: middle;
+ font-size: 8pt;
+ padding: 2px;
 }
